@@ -115,6 +115,7 @@ enum {
 #define PWRITEV_VAL_EV                 10 /* Used in merger, with IO_EV */
 #define OPEN_VAL_EV                    11 /* Used in merger, with IO_EV */
 #define FOPEN_VAL_EV                   12 /* Used in merger, with IO_EV */
+#define IOCTL_VAL_EV                   13 /* Used in merger, with IO_EV */
 #define USER_EV                  40000006
 #define HWC_DEF_EV               40000007
 #define HWC_CHANGE_EV            40000008
@@ -199,6 +200,8 @@ enum
 #define FILE_NAME_EV             40000059
 #define OPEN_EV                  40000060
 #define FOPEN_EV                 40000061
+#define IOCTL_EV                 40000067
+#define IOCTL_REQUEST_EV         40000068
 
 #define ADDRESSES_FOR_BINARY_EV  41000000
 
