@@ -6,6 +6,7 @@ ChangeLog
  * 17May2018 Adds extrae_module.f90 to distribution
  + 15May2018 Added configure check for MPI_Get_accumulate, BullMPI does not implement this routine
  + 11May2018 Added support for ARM64 cross-compilation (GitHub pull #11)
+ + 10May2018 Added instrumentation wrapper for ioctl()
  * 06Apr2018 Fixed missing states for MPI_*neighbor* routines
  * 20Mar2018 Added instrumentation support for MPI_*neighbor* routines
  * 19Mar2018 Allows defining a trace-control gops interval starting at 0
